--- a/styles.scss
+++ b/styles.scss
@@ -1,22 +1,41 @@
-.modal-title {
+.finance-container {
+    max-width: 380px;
+    min-width: 360px;
+    justify-content: center;
+}
+
+.finance-header {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    padding: 0 12px 12px 12px;
+
+    button {
+        font-size: 20px;
+    }
+}
+
+.finance-title {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 26px;
+    margin: 26px 0;
 
     button {
         font-size: 24px;
     }
 }
 
-.modal-content {
+.finance-content {
+    position: relative;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
 .balance {
     width: 250px;
+    margin-bottom: 42px;
 }
 
 .balance-top {
@@ -50,13 +69,13 @@
 
 .balance-body {
     display: flex;
+    justify-content: space-between;
 }
 
 .balance_body-expenses {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-right: auto;
 
     span {
         text-align: center;
@@ -83,7 +102,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-left: auto;
 
     span {
         text-align: center;
@@ -104,4 +122,153 @@
         margin: 0;
         font-size: 18px;
     }
+}
+
+.main-nav {
+    display: flex;
+    justify-content: space-between;
+    width: 250px;
+
+    a {
+        all: unset;
+        cursor: pointer;
+        color: #94afb3;
+        font-size: 18px;
+    }
+}
+
+.home_button--active {
+    padding: 2px 6px !important;
+    border-top-left-radius: 12px !important;
+    border-top-right-radius: 12px !important;
+    // border-bottom-left-radius: 12px !important;
+    // border-bottom-right-radius: 12px !important;
+    background: #232e3c !important;
+}
+
+.main-content {
+    width: 100%;
+    height: 100%;
+    background-color: #232e3c;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border-radius: 12px;
+}
+
+.main-content-body {
+    display: flex;
+    justify-content: center;
+    // align-items: center; 
+    padding: 16px;
+    min-height: 300px;
+}
+
+.input-search {
+    width: 100%;
+}
+
+.undefined-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 242px;
+
+    span {
+        font-size: 24px;
+    }
+
+    p {
+        text-align: center;
+    }
+}
+
+.main-content-button {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 16px;
+    
+    button {
+        cursor: pointer;
+        background-color: #5288c1;
+        color: white;
+        width: 100%;
+        height: 50px;
+    }
+}
+
+.exit-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+    cursor: pointer;
+
+    svg {
+        width: 32px;
+        height: 32px;
+        margin: 3px;
+    }
+}
+
+.main-add-form {
+    width: 100%;
+    height: 200px;
+    background-color: #232e3c;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: 20px;
+}
+
+.main-form_radio {
+    display: flex;
+    // width: 100%;
+    margin: 30px 20px 0 20px;
+    background-color: #17212b;
+    border-radius: 10px;
+}
+
+.main-form-input {
+    margin: 0 20px 30px 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-radio_exprense {
+    font-size: 16px;
+    width: 100%;
+    height: 44px;
+    border-radius: 10px;
+    margin: 2px;
+    box-shadow: none !important;
+    background-color: transparent !important;
+    cursor: pointer;
+}
+
+.main-radio_income {
+    background-color: transparent !important;
+    box-shadow: none !important;
+    height: 44px;
+    width: 100%;
+    font-size: 16px;
+    border-radius: 10px;
+    margin: 2px;
+    cursor: pointer;
+}
+
+.main-radion-button--active {
+    background-color: #303942 !important;
+}
+
+.form-inputs {
+    font-size: 16px !important;
+    width: 100%;
+    padding: 24px 16px !important;
+    border-radius: 10px !important;
+    background-color: #17212b !important;
+    border: 1px #333c45 solid !important;
 }
