--- a/styles.css
+++ b/styles.css
@@ -124,13 +124,11 @@
   cursor: pointer;
   color: #94afb3;
   font-size: 18px;
+  margin-bottom: 4px;
 }
 
 .home_button--active {
-  padding: 2px 6px !important;
-  border-top-left-radius: 12px !important;
-  border-top-right-radius: 12px !important;
-  background: #232e3c !important;
+  color: #5288c1 !important;
 }
 
 .main-header {
@@ -152,9 +150,15 @@
 
 .main-content-body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   padding: 16px;
-  min-height: 300px;
+  height: 380px;
+  overflow-y: auto;
+}
+
+.main-content-body--undefined {
+  flex-direction: row;
+  justify-content: center;
 }
 
 .input-search {
@@ -287,6 +291,55 @@
 .form-selects-date-buttons button {
   font-size: 12px;
   background: none;
+}
+
+.history-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.full-data-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px 12px;
+}
+
+.data-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8px;
+}
+.data-list :first-child {
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+.data-list :last-child {
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+.data-item {
+  position: relative;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #17212b;
+  padding: 2px 12px;
+}
+.data-item span {
+  z-index: 10;
+  position: absolute;
+  bottom: 3px;
+  left: 16px;
+  font-size: 12px;
+}
+.data-item p {
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=styles.css.map */
