--- a/styles.scss
+++ b/styles.scss
@@ -134,16 +134,12 @@
         cursor: pointer;
         color: #94afb3;
         font-size: 18px;
+        margin-bottom: 4px;
     }
 }
 
 .home_button--active {
-    padding: 2px 6px !important;
-    border-top-left-radius: 12px !important;
-    border-top-right-radius: 12px !important;
-    // border-bottom-left-radius: 12px !important;
-    // border-bottom-right-radius: 12px !important;
-    background: #232e3c !important;
+    color: #5288c1 !important;
 }
 
 .main-header {
@@ -165,10 +161,15 @@
 
 .main-content-body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     padding: 16px;
-    min-height: 300px;
+    height: 380px;
+    overflow-y: auto;
 }
+.main-content-body--undefined {
+    flex-direction: row;
+    justify-content: center;
+}  
 
 .input-search {
     width: 100%;
@@ -304,5 +305,58 @@
     button {
         font-size: 12px;
         background: none;
+    }
+}
+
+// =======================================================
+
+.history-block {
+    display: flex;
+    flex-direction: column;
+}
+
+.full-data-block {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px 12px;
+}
+
+.data-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8px;
+
+    :first-child {
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
+    }
+    :last-child {
+        border-bottom-left-radius: 12px;
+        border-bottom-right-radius: 12px;
+    }
+}
+
+.data-item {
+    position: relative;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #17212b;
+    padding: 2px 12px;
+
+    span {
+        z-index: 10;
+        position: absolute;
+        bottom: 3px;
+        left: 16px;
+        font-size: 12px;
+    }
+    p {
+        font-size: 16px;
     }
 }
