--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   max-width: 380px;
   min-width: 360px;
   justify-content: center;
+  overflow-y: auto;
 }
 
 .finance-header {
@@ -59,8 +60,19 @@
   margin: 16px 0;
   width: 250px;
   height: 3px;
+  position: relative;
+  background-color: #a0a5ac;
+  border-radius: 100px;
+}
+.balance-line::after {
+  content: "";
+  z-index: 10;
+  position: absolute;
+  inset: 0;
   background-color: #5288c1;
   border-radius: 100px;
+  width: var(--after-width, 100%);
+  height: 100%;
 }
 
 .balance-body {
@@ -140,7 +152,6 @@
 
 .main-content {
   width: 100%;
-  height: 100%;
   background-color: #232e3c;
   display: flex;
   flex-direction: column;
@@ -152,8 +163,6 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  height: 380px;
-  overflow-y: auto;
 }
 
 .main-content-body--undefined {
@@ -180,7 +189,11 @@
 }
 
 .main-content-button {
-  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  position: fixed;
   right: 0;
   bottom: 0;
   width: 100%;
@@ -191,8 +204,9 @@
   cursor: pointer;
   background-color: #5288c1 !important;
   color: white !important;
-  width: 100% !important;
+  width: 89% !important;
   height: 50px !important;
+  margin: 0 12px 0px 0;
 }
 
 .exit-button {
@@ -293,7 +307,21 @@
   background: none;
 }
 
+.button-selects-date--active {
+  background-color: #5288c1 !important;
+}
+
 .history-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.plan-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.bill-block {
   display: flex;
   flex-direction: column;
 }
@@ -330,6 +358,7 @@
   justify-content: space-between;
   background: #17212b;
   padding: 2px 12px;
+  cursor: pointer;
 }
 .data-item span {
   z-index: 10;
