--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,7 @@
     max-width: 380px;
     min-width: 360px;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .finance-header {
@@ -63,8 +64,20 @@
     margin: 16px 0;
     width: 250px;
     height: 3px;
-    background-color: #5288c1;
+    position: relative;
+    background-color: #a0a5ac;
     border-radius: 100px;
+
+    &::after {
+        content: '';
+        z-index: 10;
+        position: absolute;
+        inset: 0;
+        background-color: #5288c1;
+        border-radius: 100px;
+        width: var(--after-width, 100%);
+        height: 100%;        
+    }
 }
 
 .balance-body {
@@ -151,7 +164,7 @@
 
 .main-content {
     width: 100%;
-    height: 100%;
+    // height: 100%;
     background-color: #232e3c;
     display: flex;
     flex-direction: column;
@@ -163,8 +176,9 @@
     display: flex;
     flex-direction: column;
     padding: 16px;
-    height: 380px;
-    overflow-y: auto;
+    // height: auto;
+    // height: 380px;
+    // overflow-y: auto;
 }
 .main-content-body--undefined {
     flex-direction: row;
@@ -192,7 +206,12 @@
 }
 
 .main-content-button {
-    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    position: fixed;
+    // background-color: #232e3c !important;
     right: 0;
     bottom: 0;
     width: 100%;
@@ -203,8 +222,9 @@
     cursor: pointer;
     background-color: #5288c1 !important;
     color: white !important;
-    width: 100% !important;
+    width: 89% !important;
     height: 50px !important;
+    margin: 0 12px 0px 0;
 }
 
 .exit-button {
@@ -307,10 +327,21 @@
         background: none;
     }
 }
+.button-selects-date--active {
+    background-color: #5288c1 !important;
+}
 
 // =======================================================
 
 .history-block {
+    display: flex;
+    flex-direction: column;
+}
+.plan-block {
+    display: flex;
+    flex-direction: column;
+}
+.bill-block {
     display: flex;
     flex-direction: column;
 }
@@ -348,6 +379,7 @@
     justify-content: space-between;
     background: #17212b;
     padding: 2px 12px;
+    cursor: pointer;
 
     span {
         z-index: 10;
