--- a/styles.css
+++ b/styles.css
@@ -371,4 +371,66 @@
   font-size: 16px;
 }
 
+.calendar-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: #232e3c;
+  border-radius: 12px;
+}
+
+.calendar-list-title {
+  display: flex;
+  justify-content: space-between;
+  width: 260px;
+  margin-top: 20px;
+}
+
+.calendar-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 8px 20px;
+  width: 100%;
+  gap: 1.2px;
+}
+.calendar-list :first-child {
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+.calendar-list :last-child {
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+.calendar-list li {
+  list-style: none;
+  background-color: #17212b;
+  width: 100%;
+  padding: 12px 16px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.calendar-list li p {
+  margin: 0;
+  font-size: 20px;
+}
+
+.story-month {
+  display: flex;
+  flex-direction: column;
+}
+
+.expense-all-month {
+  color: #ff4f44;
+}
+
+.income-all-month {
+  color: #abafb3;
+}
+
 /*# sourceMappingURL=styles.css.map */
