--- a/styles.scss
+++ b/styles.scss
@@ -12,6 +12,7 @@
     padding: 0 12px 12px 12px;
 
     button {
+        cursor: pointer;
         font-size: 20px;
     }
 }
@@ -216,20 +217,21 @@
     bottom: 0;
     width: 100%;
     padding: 16px;
+    padding-top: 0;
 }
 
 .add-button {
     cursor: pointer;
     background-color: #5288c1 !important;
     color: white !important;
-    width: 89% !important;
+    width: 100% !important;
     height: 50px !important;
     margin: 0 12px 0px 0;
 }
 
 .exit-button {
     position: absolute;
-    top: 31px;
+    top: 32px;
     left: 10px;
     z-index: 10;
     cursor: pointer;
@@ -238,6 +240,21 @@
         width: 32px;
         height: 32px;
         margin: 3px;
+    }
+}
+
+.delete-button {
+    position: absolute;
+    top: 31px;
+    right: 10px;
+    z-index: 10;
+    cursor: pointer;
+
+    svg {
+        width: 32px;
+        height: 32px;
+        margin: 3px;
+        color: red;
     }
 }
 
