--- a/styles.scss
+++ b/styles.scss
@@ -184,6 +184,7 @@
 .main-content-body--undefined {
     flex-direction: row;
     justify-content: center;
+    padding: 45% 0;
 }  
 
 .input-search {
