--- a/styles.scss
+++ b/styles.scss
@@ -184,7 +184,10 @@
 .main-content-body--undefined {
     flex-direction: row;
     justify-content: center;
-    padding: 45% 0;
+    padding: 43% 0;
+}
+.main-content-body--padding {
+    padding-bottom: 60px;
 }  
 
 .input-search {
@@ -338,6 +341,7 @@
 
 .form-selects-date-buttons {
     display: flex;
+    flex-wrap: wrap;
     gap: 6px;
 
     button {
