--- a/styles.scss
+++ b/styles.scss
@@ -177,18 +177,20 @@
     display: flex;
     flex-direction: column;
     padding: 16px;
-    // height: auto;
-    // height: 380px;
-    // overflow-y: auto;
 }
 .main-content-body--undefined {
     flex-direction: row;
+    align-items: center;
     justify-content: center;
     padding: 43% 0;
 }
 .main-content-body--padding {
     padding-bottom: 60px;
-}  
+}
+.history-content {
+    display: flex;
+    flex-direction: column;
+}
 
 .input-search {
     width: 100%;
@@ -370,6 +372,7 @@
 
 .full-data-block {
     display: flex;
+    gap: 12px;
     align-items: center;
     justify-content: space-between;
     width: 100%;
