I checked the consistency of the plans in the archive and those created earlier in the month.

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@
   margin-bottom: 42px;
 }
 
+.balance-other {
+  margin-top: 42px;
+}
+
 .balance-top {
   display: flex;
   flex-direction: column;
