--- a/styles.scss
+++ b/styles.scss
@@ -486,12 +486,19 @@
 .story-month {
     display: flex;
     flex-direction: column;
+    align-items: end;
 }
-.expense-all-month {
-    color: #ff4f44
+.expense-all-month-failure {
+    color: #ff4f44;
+    font-size: 17px;
+}
+.expense-all-month-success {
+    color: #f5f5f5;
+    font-size: 17px;
 }
 .income-all-month {
-    color: #abafb3
+    color: #abafb3;
+    font-size: 14px;
 }
 
 // ===========================================
