--- a/styles.scss
+++ b/styles.scss
@@ -358,6 +358,19 @@
     background-color: #5288c1 !important;
 }
 
+.form-transfer-expense-div {
+    cursor: pointer;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    svg {
+        width: 30px;
+        height: 30px;
+    }
+}
+
 // =======================================================
 
 .history-block {
