--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@
 .finance-header button {
   cursor: pointer;
   font-size: 20px;
+  background-color: #233547;
+  border-radius: 24px;
+  gap: 6px;
 }
 
 .finance-title {
