--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,9 @@
     button {
         cursor: pointer;
         font-size: 20px;
+        background-color: #233547;
+        border-radius: 24px;
+        gap: 6px;
     }
 }
 
