--- a/styles.scss
+++ b/styles.scss
@@ -393,13 +393,33 @@
     flex-direction: column;
 }
 
-.full-data-block {
+.header-block {
     display: flex;
     gap: 12px;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     padding: 10px 12px;
+}
+
+.header-date-block {
+    overflow: hidden;
+    white-space: nowrap;
+    width: 200px;
+    p {
+        margin: 0;
+    }
+}
+.header-type-block {
+    overflow: hidden;
+    white-space: nowrap;
+    width: 200px;
+    p {
+        margin: 0;
+    }
+}
+.header-amount-block {
+    white-space: nowrap;
 }
 
 .data-list {
@@ -464,6 +484,10 @@
     display: flex;
     flex-direction: column;
     gap: 2px;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 150px;
+    padding: 2px;
     p {
         margin: 0;
         font-size: 16px;
