Necessary minor edits

--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,10 @@
     display: none !important;
 }
 
+.disable-element {
+    display: none !important;
+}
+
 .finance-container {
     max-width: 380px;
     min-width: 360px;
